--- a/src/App.css
+++ b/src/App.css
@@ -320,24 +320,40 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 .banner button {
-  color: #fff;
-  font-weight: 700;
-  font-size: 20px;
-  margin-top: 60px;
-  letter-spacing: 0.8px;
-  display: flex;
-  align-items: center;
+  z-index: 100;
+  width: 10em;
+  height: 3em;
+  padding: .25em .5em;
+  color: #000;
+  background: #fff;
+  border: 1px solid #fff;
+  border-radius: 4px 0px 0px 4px;
+  cursor: pointer;
+  font-size: 1.15em;
+  font-weight: 200;
+  box-shadow: 0 0 10px rgba( 255, 255, 255, .5 );
+  transition: box-shadow .5s;
+
+  &:hover {
+    font-size: 1.2em;
+    background: #000;
+    color: #fff;
+    box-shadow: 5px 5px 40px 5px rgba( 255, 255, 255, .75 );
+  }
 }
 
-.banner button svg {
-  font-size: 25px;
-  margin-left: 10px;
-  transition: 0.3s ease-in-out;
-  line-height: 1;
-}
-
-.banner button:hover svg {
-  margin-left: 25px;
+.banner .button-icon {
+    z-index: 100;
+    background-color: #000;
+    display: flex;
+    border: 1px solid #fff;
+    border-radius: 0px 4px 4px 0px;
+    border-left-style: hidden;
+    box-shadow: 0 0 10px rgba( 255, 255, 255, .5 );
+    transition: box-shadow .5s;
+    width: 3rem;
+    justify-content: center;
+    align-items: center;
 }
 
 .banner img {
